Adjust size of drop down in export dialog

The dropdown list of the export dialog cuts the values if the exporter is changed until the dialog is reopened.

This fix stretches both drop down fields to a width of 100%, like other projects do.

BUG: 460163